--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -71,7 +71,8 @@
         </button>
       </form>
       <p style="margin-top: 15px">
-        Don't have an account? <a href="{% url 'signup' %}">Signup</a>
+        Don't have an account? <a href="{% url 'authapp:signup' %}">Signup</a>
+
       </p>
     </div>
   </body>
