--- a/authapp/templates/authapp/signup.html
+++ b/authapp/templates/authapp/signup.html
@@ -78,7 +78,8 @@
       </form>
 
       <p style="margin-top: 15px">
-        Already have an account? <a href="{% url 'login' %}">Login</a>
+        Already have an account? <a href="{% url 'authapp:login' %}">Login</a>
+
       </p>
     </div>
   </body>
